--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 
 [dev-dependencies]
+pretty_assertions = "1"
 reqwest = "0.11"
