--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,22 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+# `#[derive(Serialize)]` and `#[derive(Deserialize)]`.
+# The feature is not enabled by default to avoid pulling in 
+# unnecessary dependencies for projects that do not need it.
+serde = { version = "1", features = ["derive"]}
+
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+features = [
+    "runtime-tokio-rustls", 
+    "macros", 
+    "postgres", 
+    "uuid", 
+    "chrono",
+    "migrate"
+]
 
 [dev-dependencies]
 pretty_assertions = "1"
