Use the right syntax for job dependencies

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,7 +51,7 @@ jobs:
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
-    depends-on: test
+    needs: test
     services:
       postgres:
         image: postgres:12
@@ -79,7 +79,7 @@ jobs:
 
   coverage:
     name: Code coverage
-    depends-on: test
+    needs: test
     runs-on: ubuntu-latest
     services:
       postgres:
